--- a/Agent/pom.xml
+++ b/Agent/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.frame</groupId>
-        <artifactId>Frame</artifactId>
+        <artifactId>miniframe</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Agent</artifactId>
+    <artifactId>agent</artifactId>
 
     <properties>
     </properties>
