--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.frame</groupId>
-        <artifactId>Frame</artifactId>
+        <artifactId>miniframe</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Web</artifactId>
+    <artifactId>web</artifactId>
 
     <properties>
     </properties>
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>org.frame</groupId>
-            <artifactId>Injection</artifactId>
+            <artifactId>injection</artifactId>
             <version>${injection.version}</version>
         </dependency>
         <dependency>
