Adding artifact finalname in build section

--- a/Agent/pom.xml
+++ b/Agent/pom.xml
@@ -97,6 +97,8 @@
                 </executions>
             </plugin>
         </plugins>-->
+
+        <finalName>${artifactId}-${version}</finalName>
     </build>
 
 </project>
