--- a/Demo/pom.xml
+++ b/Demo/pom.xml
@@ -81,5 +81,6 @@
                 </executions>
             </plugin>
         </plugins>
+        <finalName>${artifactId}-${version}</finalName>
     </build>
 </project>
