--- a/Tools/pom.xml
+++ b/Tools/pom.xml
@@ -105,6 +105,8 @@
                 </executions>
             </plugin>
         </plugins>-->
+
+        <finalName>${artifactId}-${version}</finalName>
     </build>
 
 </project>
