--- a/Injection/pom.xml
+++ b/Injection/pom.xml
@@ -77,6 +77,8 @@
                 </executions>
             </plugin>
         </plugins>-->
+
+        <finalName>${artifactId}-${version}</finalName>
     </build>
 
 </project>
