--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
                 <version>${maven.jar.plugin.version}</version>
             </plugin>-->
         </plugins>
+        <finalName>${artifactId}-${version}</finalName>
     </build>
 
 </project>
