--- a/web/pom.xml
+++ b/web/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>web</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
     </properties>
@@ -26,5 +27,9 @@
             <version>${servlet.api.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>${artifactId}-${version}</finalName>
+    </build>
 
 </project>
