--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>injection</module>
         <module>web</module>
         <module>agent</module>
+        <module>transaction</module>
     </modules>
 
     <properties>
