--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>web</module>
         <module>agent</module>
         <module>Aspect</module>
+        <module>Weaver</module>
     </modules>
 
     <properties>
