--- a/Aspect/pom.xml
+++ b/Aspect/pom.xml
@@ -117,7 +117,7 @@
              </plugin>
          </plugins>-->
 
-        <finalName>${artifactId}-${version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
 
 </project>
