--- a/Tools/pom.xml
+++ b/Tools/pom.xml
@@ -106,7 +106,7 @@
             </plugin>
         </plugins>-->
 
-        <finalName>${artifactId}-${version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
 
 </project>
