Start embedded web server with tomcat as first example

--- a/Agent/pom.xml
+++ b/Agent/pom.xml
@@ -98,7 +98,7 @@
             </plugin>
         </plugins>-->
 
-        <finalName>${artifactId}-${version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
 
 </project>
