--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                 <version>${maven.jar.plugin.version}</version>
             </plugin>-->
         </plugins>
-        <finalName>${artifactId}-${version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
 
 </project>
