--- a/Injection/pom.xml
+++ b/Injection/pom.xml
@@ -78,7 +78,7 @@
             </plugin>
         </plugins>-->
 
-        <finalName>${artifactId}-${version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
 
 </project>
