Modify gitignore file to ignore target folders

--- a/Weaver/pom.xml
+++ b/Weaver/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Weaver</artifactId>
+    <artifactId>weaver</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
