Reforming web module

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>agent</module>
         <module>aspect</module>
         <module>weaver</module>
+        <module>Data</module>
     </modules>
 
     <properties>
