--- a/web/pom.xml
+++ b/web/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <tomcat.version>8.0.48</tomcat.version>
+        <http.client.version>5.2.1</http.client.version>
     </properties>
 
     <dependencies>
@@ -27,6 +28,14 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet.api.version}</version>
         </dependency>
+
+        <!-- for web client -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>${http.client.version}</version>
+        </dependency>
+
         <!--for embedded tomcat -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
