Moving classes to specific modules

--- a/Demo/src/main/resources/web-config.properties
+++ b/Demo/src/main/resources/web-config.properties
@@ -1,1 +1,1 @@
-org.web.core.ControllerConfig:org.web.core.helpers.ControllerConfigImpl
+org.web.core.config.ControllerConfig:org.web.core.config.ControllerConfigImpl
